[gd_scene load_steps=5 format=2]

[ext_resource path="res://Common/Experimental/ProtoUpgradeGun/Projectiles/RailShells/RailShell.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 50, 15, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 107.59
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 100.0
radial_accel_random = 1.0
tangential_accel = 100.0
tangential_accel_random = 1.0
scale = 5.0
scale_random = 0.82
color = Color( 5, 5, 5, 1 )
color_ramp = SubResource( 2 )

[node name="RailShell" type="RayCast2D"]
cast_to = Vector2( 100, 0 )
collision_mask = 0
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="LaserBeam" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 100, 0 )
width = 30.0
default_color = Color( 16, 14.56, 0, 1 )

[node name="Particles2D" type="Particles2D" parent="LaserBeam"]
show_behind_parent = true
position = Vector2( 50, 0 )
amount = 50
lifetime = 0.5
explosiveness = 0.39
randomness = 1.0
local_coords = false
process_material = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
